Добавил в разметку параграф,присвоив ему class , так же присвоил class  тегу body , задал стили и боди и параграфу , и поменял стили в заголовка

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="main">
     <h1 class="heading">Это первая запись в этой разметке</h1>
+    <p class="desctiption">
+      Итак что же должно быть на этой странице? А по сути ни чего так как эта
+      страница вего лишь заготовка, просто тесторый html код с css свойствами
+    </p>
   </body>
 </html>
